@@ -3,12 +3,7 @@ package com.pawith.todoapplication.service;
 import com.pawith.commonmodule.annotation.ApplicationService;
 import com.pawith.commonmodule.response.ListResponse;
 import com.pawith.commonmodule.response.SliceResponse;
-import com.pawith.todoapplication.dto.response.TodoTeamInfoDetailResponse;
-import com.pawith.todoapplication.dto.response.TodoTeamNameResponse;
-import com.pawith.todoapplication.dto.response.TodoTeamRandomCodeResponse;
-import com.pawith.todoapplication.dto.response.TodoTeamInfoResponse;
-import com.pawith.todoapplication.dto.response.TodoTeamSearchInfoResponse;
-import com.pawith.todoapplication.dto.response.WithdrawTodoTeamResponse;
+import com.pawith.todoapplication.dto.response.*;
 import com.pawith.todoapplication.mapper.TodoTeamMapper;
 import com.pawith.tododomain.entity.Register;
 import com.pawith.tododomain.entity.TodoTeam;
@@ -25,10 +20,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
 
 @ApplicationService
 @RequiredArgsConstructor
@@ -56,7 +47,7 @@ public class TodoTeamGetUseCase {
             registerQueryService.findRegisterListByUserIdWithTodoTeam(requestUser.getId())
                 .stream()
                 .map(register -> TodoTeamMapper.mapToTodoTeamNameResponse(register.getTodoTeam(), register))
-                .collect(Collectors.toList());
+                .toList();
         return ListResponse.from(todoTeamNameResponses);
     }
 
@@ -68,25 +59,25 @@ public class TodoTeamGetUseCase {
         return TodoTeamMapper.mapToTodoTeamSearchInfoResponse(todoTeam, presidentUser, registerCount);
     }
 
-    public TodoTeamRandomCodeResponse getTodoTeamCode(Long teamId) {
-        TodoTeam todoTeam = todoTeamQueryService.findTodoTeamById(teamId);
+    public TodoTeamRandomCodeResponse getTodoTeamCode(final Long teamId) {
+        final TodoTeam todoTeam = todoTeamQueryService.findTodoTeamById(teamId);
         return TodoTeamMapper.mapToTodoTeamRandomCodeResponse(todoTeam);
     }
 
     public ListResponse<WithdrawTodoTeamResponse> getWithdrawTodoTeam() {
-        User requestUser = userUtils.getAccessUser();
-        List<TodoTeam> todoTeamList = todoTeamQueryService.findAllTodoTeamByUserId(requestUser.getId());
+        final User requestUser = userUtils.getAccessUser();
+        final List<TodoTeam> todoTeamList = todoTeamQueryService.findAllTodoTeamByUserId(requestUser.getId());
         return ListResponse.from(
-                todoTeamList.stream()
-                        .map(todoTeam -> new WithdrawTodoTeamResponse(todoTeam.getImageUrl(), todoTeam.getTeamName()))
-                        .collect(Collectors.toList())
+            todoTeamList.stream()
+                .map(todoTeam -> new WithdrawTodoTeamResponse(todoTeam.getImageUrl(), todoTeam.getTeamName()))
+                .toList()
         );
     }
 
-    public TodoTeamInfoDetailResponse getTodoTeamInfo(Long todoTeamId) {
-        TodoTeam todoTeam = todoTeamQueryService.findTodoTeamById(todoTeamId);
-        Integer registerCount = registerQueryService.countRegisterByTodoTeamId(todoTeamId);
-        Integer petCount = petQueryService.countPetByTodoTeamId(todoTeamId);
+    public TodoTeamInfoDetailResponse getTodoTeamInfo(final Long todoTeamId) {
+        final TodoTeam todoTeam = todoTeamQueryService.findTodoTeamById(todoTeamId);
+        final Integer registerCount = registerQueryService.countRegisterByTodoTeamId(todoTeamId);
+        final Integer petCount = petQueryService.countPetByTodoTeamId(todoTeamId);
         return TodoTeamMapper.mapToTodoTeamInfoDetailResponse(todoTeam, registerCount, petCount);
     }
 
